@@ -4,6 +4,7 @@
   * Fix for splice local root exploit is included, details on
     http://www.kernel.org/pub/linux/kernel/v2.6/ChangeLog-2.6.22.18
   * Feature Requests #1421120: Fixup "vim fsync" error on cofs.
+  * Bugfix get_size for double opened block devices.
 
   Installer:
   * Update image ArchLinux-2007.08-2
